# plex-dlna-player

./: .gitignore  pyproject.toml
plexdlnaserver/: utils.py
plexdlnaserver/config/: data.json
plexdlnaserver/dlna/: discover.py  dlna_device.py
plexdlnaserver/dlna/models/: root.py  service.py
plexdlnaserver/plex/: adapters.py  gdm.py  pin_login.py  play_queue.py  plexserver.py  subscribe.py
plexdlnaserver/settings/: __init__.py
tests/: conftest.py  test_dlna_device.py  test_utils.py
